--- a/virtualTourist/Base.lproj/Main.storyboard
+++ b/virtualTourist/Base.lproj/Main.storyboard
@@ -137,7 +137,7 @@
                     <navigationItem key="navigationItem" id="jmT-k9-od7"/>
                     <connections>
                         <outlet property="collectionView" destination="V6f-QN-Ns8" id="fDW-4A-NXq"/>
-                        <outlet property="flowLayout" destination="V6f-QN-Ns8" id="5Ni-eK-jM4"/>
+                        <outlet property="flowLayout" destination="T2s-dx-ayA" id="lOP-46-zTY"/>
                         <outlet property="mapView" destination="toC-0N-cD3" id="ptX-JH-xro"/>
                     </connections>
                 </viewController>
