--- a/virtualTourist/Base.lproj/Main.storyboard
+++ b/virtualTourist/Base.lproj/Main.storyboard
@@ -79,21 +79,21 @@
                                         <rect key="frame" x="0.0" y="187" width="375" height="373.5"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="T2s-dx-ayA">
-                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="itemSize" width="124" height="117"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="6vs-RX-xjW" customClass="CollectionViewCell" customModule="virtualTourist" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="124" height="117"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CollectionViewCell" insetsLayoutMarginsFromSafeArea="NO" id="bbt-aY-s2J" customClass="CollectionViewCell" customModule="virtualTourist" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bbt-aY-s2J">
+                                                    <rect key="frame" x="0.0" y="0.0" width="124" height="117"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GrV-cP-WIL">
-                                                            <rect key="frame" x="0.0" y="2.5" width="128" height="123"/>
+                                                            <rect key="frame" x="0.0" y="2.5" width="124" height="112"/>
                                                         </imageView>
                                                     </subviews>
                                                     <constraints>
@@ -103,11 +103,16 @@
                                                         <constraint firstAttribute="trailing" secondItem="GrV-cP-WIL" secondAttribute="trailing" id="qrv-cN-0zs"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
+                                                <size key="customSize" width="124" height="117"/>
                                                 <connections>
                                                     <outlet property="imageView" destination="GrV-cP-WIL" id="MEb-oC-a0m"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="4ZU-NZ-Kje" id="PS1-TJ-Vlm"/>
+                                            <outlet property="delegate" destination="4ZU-NZ-Kje" id="Uv2-Sv-xLp"/>
+                                        </connections>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J4W-uD-23j">
                                         <rect key="frame" x="0.0" y="560.5" width="375" height="62.5"/>
