--- a/virtualTourist/Assets/Base.lproj/Main.storyboard
+++ b/virtualTourist/Assets/Base.lproj/Main.storyboard
@@ -96,8 +96,8 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="124" height="117"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GrV-cP-WIL">
-                                                            <rect key="frame" x="0.0" y="2.5" width="124" height="112"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GrV-cP-WIL">
+                                                            <rect key="frame" x="0.0" y="0.0" width="124" height="117"/>
                                                         </imageView>
                                                     </subviews>
                                                     <constraints>
@@ -158,7 +158,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cloud" catalog="system" width="128" height="87"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
